--- a/navigation2/nav2_bringup/bringup/params/sentry_params.yaml
+++ b/navigation2/nav2_bringup/bringup/params/sentry_params.yaml
@@ -2,7 +2,7 @@ bt_navigator:
   ros__parameters:
     use_sim_time: True
     global_frame: map
-    robot_base_frame: imu_link
+    robot_base_frame: base_link
     odom_topic: /odom
     bt_loop_duration: 10
     default_server_timeout: 20
@@ -177,7 +177,7 @@ local_costmap:
       update_frequency: 5.0
       publish_frequency: 10.0
       global_frame: odom
-      robot_base_frame: imu_link
+      robot_base_frame: base_link
       use_sim_time: True
       always_send_full_costmap: True
       rolling_window: true
@@ -207,7 +207,7 @@ global_costmap:
       update_frequency: 1.0
       publish_frequency: 1.0
       global_frame: map
-      robot_base_frame: imu_link
+      robot_base_frame: base_link
       use_sim_time: True
       robot_radius: 0.22
       resolution: 0.05
