--- a/VINS-Fusion-ROS2/config/oak-d-pro-400p/oak_no_imu.yaml
+++ b/VINS-Fusion-ROS2/config/oak-d-pro-400p/oak_no_imu.yaml
@@ -67,6 +67,6 @@ estimate_td: 0                     # online estimate time offset between camera 
 td: 0.006404406528045333                             # initial value of time offset. unit: s. readed image clock + td = real image clock (IMU clock)
 
 # #loop closure parameters
-# load_previous_pose_graph: 0        # load and reuse previous pose graph; load from 'pose_graph_save_path'
-# pose_graph_save_path: "/home/dji/output/pose_graph/" # save and load path
-# save_image: 0                   # save image in pose graph for visualization prupose; you can close this function by setting 0 
+load_previous_pose_graph: 0        # load and reuse previous pose graph; load from 'pose_graph_save_path'
+pose_graph_save_path: "/home/tup/ros2_ws/src/TUP2023-Sentry-Framework/TUP2023-Sentry-Nav/VINS-Fusion-ROS2/pose_graph" # save and load path
+save_image: 0                   # save image in pose graph for visualization prupose; you can close this function by setting 0 
