Pre-Open Update(RMUL major changes added).

--- a/VINS-Fusion-ROS2/vins/CMakeLists.txt
+++ b/VINS-Fusion-ROS2/vins/CMakeLists.txt
@@ -2,7 +2,9 @@ cmake_minimum_required(VERSION 3.5)
 project(vins)
 
 set(CMAKE_CXX_STANDARD 14)
-add_compile_options(-Wextra -Wpedantic)
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(-Wall -Wextra -Wpedantic -O3)
+endif()
 set(CMAKE_BUILD_TYPE Release)
 # SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
 
