--- a/grid_map/grid_map_demos/CMakeLists.txt
+++ b/grid_map/grid_map_demos/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.5.0)
 project(grid_map_demos)
-
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(-Wall -Wextra -Wpedantic -O3)
+endif()
 ## Find ament_cmake macros and libraries
 find_package(ament_cmake REQUIRED)
 find_package(cv_bridge REQUIRED)
