--- a/grid_map/grid_map_demos/package.xml
+++ b/grid_map/grid_map_demos/package.xml
@@ -22,6 +22,7 @@
   <depend>grid_map_loader</depend>
   <depend>grid_map_msgs</depend>
   <depend>grid_map_octomap</depend>
+  <depend>grid_map_pcl</depend>
   <depend>grid_map_ros</depend>
   <depend>grid_map_rviz_plugin</depend>
   <depend>grid_map_visualization</depend>
