--- a/navigation2/nav2_bringup/bringup/params/sentry_params.yaml
+++ b/navigation2/nav2_bringup/bringup/params/sentry_params.yaml
@@ -54,7 +54,7 @@ bt_navigator_rclcpp_node:
 controller_server:
   ros__parameters:
     use_sim_time: True
-    controller_frequency: 20.0
+    controller_frequency: 30.0
     min_x_velocity_threshold: 0.001
     min_y_velocity_threshold: 0.1
     min_theta_velocity_threshold: 0.001
@@ -84,59 +84,59 @@ controller_server:
       global_plan_overwrite_orientation: False
       allow_init_with_backwards_motion: False
       max_global_plan_lookahead_dist: 3.0
-      global_plan_viapoint_sep: 1.0
+      global_plan_viapoint_sep: 0.8
       global_plan_prune_distance: 1.0
       exact_arc_length: False
       feasibility_check_no_poses: 0
       publish_feedback: False
           
       # Robot
-      max_vel_x: 1.0
-      max_vel_x_backwards: -0.5
-      max_vel_y: 1.0
-      max_vel_theta: 0.5
+      max_vel_x: 1.2
+      # max_vel_x_backwards: -0.5
+      max_vel_y: 0.9
+      max_vel_theta: 0.8
       acc_lim_x: 1.0
-      acc_lim_theta: 1.0
+      acc_lim_theta: 2.0
       footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
       #   type: "line"
       #   line_start: [-0.25, 0.0]
       #   line_end: [0.25, 0.0]
         type: "circular"
-        radius: 0.4 # for type "circular"
+        radius: 0.35 # for type "circular"
       # GoalTolerance
       free_goal_vel: False
       # Obstacles
-      min_obstacle_dist: 0.35
-      inflation_dist: 0.6
+      min_obstacle_dist: 0.4
+      inflation_dist: 0.4
       include_costmap_obstacles: True
-      costmap_obstacles_behind_robot_dist: 2.0
+      costmap_obstacles_behind_robot_dist: 2.5
       obstacle_poses_affected: 15
-      dynamic_obstacle_inflation_dist: 0.3
+      dynamic_obstacle_inflation_dist: 0.35
       include_dynamic_obstacles: True 
       costmap_converter_plugin: "costmap_converter::CostmapToPolygonsDBSMCCH"
       costmap_converter_spin_thread: True
-      costmap_converter_rate: 10
+      costmap_converter_rate: 15
       # Optimization
-      no_inner_iterations: 4
+      no_inner_iterations: 5
       no_outer_iterations: 4
       optimization_activate: True
       optimization_verbose: False
       penalty_epsilon: 0.1
       obstacle_cost_exponent: 4.0
-      weight_max_vel_x: 1.5
-      weight_max_vel_theta: 1.0
+      weight_max_vel_x: 2.0
+      weight_max_vel_theta: 0.5
       weight_acc_lim_x: 0.7
       weight_acc_lim_theta: 5.0
-      weight_kinematics_nh: 20.0
-      weight_kinematics_forward_drive: 10000.0
-      weight_kinematics_turning_radius: 0.5
-      weight_optimaltime: 20.0 # must be > 0
+      weight_kinematics_nh: 30.0
+      weight_kinematics_forward_drive: 2000.0
+      weight_kinematics_turning_radius: 1.0
+      weight_optimaltime: 5.0 # must be > 0
       weight_shortest_path: 0.1
-      weight_obstacle: 250.0
-      weight_inflation: 15.0
+      weight_obstacle: 300.0
+      weight_inflation: 20.0
       weight_dynamic_obstacle: 10.0 # not in use yet
-      weight_dynamic_obstacle_inflation: 0.2
-      weight_viapoint: 100.0
+      weight_dynamic_obstacle_inflation: 0.3
+      weight_viapoint: 80.0
       weight_adapt_factor: 2.0
 
       # Homotopy Class Planner
@@ -179,8 +179,8 @@ controller_server_rclcpp_node:
 local_costmap:
   local_costmap:
     ros__parameters:
-      update_frequency: 10.0
-      publish_frequency: 10.0
+      update_frequency: 15.0
+      publish_frequency: 15.0
       global_frame: odom
       robot_base_frame: base_link
       use_sim_time: True
@@ -189,7 +189,7 @@ local_costmap:
       width: 5
       height: 5
       resolution: 0.05
-      robot_radius: 0.4
+      robot_radius: 0.35
       plugins: ["msg_layer", "inflation_layer"]
       msg_layer:
         plugin: "nav2_msg_costmap_plugin::MsgLayer"
@@ -198,7 +198,7 @@ local_costmap:
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
-        inflation_radius: 0.2
+        inflation_radius: 0.4
   local_costmap_client:
     ros__parameters:
       use_sim_time: True
@@ -214,7 +214,7 @@ global_costmap:
       global_frame: map
       robot_base_frame: base_link
       use_sim_time: True
-      robot_radius: 0.4
+      robot_radius: 0.35
       resolution: 0.05
       track_unknown_space: true
       plugins: ["static_layer","msg_layer","inflation_layer"]
@@ -228,7 +228,7 @@ global_costmap:
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
-        inflation_radius: 0.2
+        inflation_radius: 0.1
       always_send_full_costmap: True
   global_costmap_client:
     ros__parameters:
@@ -240,7 +240,7 @@ global_costmap:
 map_server:
   ros__parameters:
     use_sim_time: True
-    yaml_filename: "/home/tup/ros2_ws/src/TUP2023-Sentry-Framework/TUP2023-Sentry-Nav/navigation2/nav2_bringup/bringup/maps/133_out.yaml"
+    yaml_filename: "/home/tup/ros2_ws/src/TUP2023-Sentry-Framework/TUP2023-Sentry-Nav/navigation2/nav2_bringup/bringup/maps/RMUL.yaml"
 
 map_saver:
   ros__parameters:
