--- a/grid_map/grid_map_demos/config/pointcloud2_to_gridmap_demo.yaml
+++ b/grid_map/grid_map_demos/config/pointcloud2_to_gridmap_demo.yaml
@@ -2,6 +2,7 @@ pointcloud2_to_gridmap:
   ros__parameters:
     pointcloud_topic: "/lio_sam/mapping/cloud_registered_raw"
     map_frame_id: "odom"
+    base_frame_id: "base_link"
     integration_time: 1.0
     filters:
       filter1:  # Fill holes in the map with inpainting.
