--- a/grid_map/grid_map_demos/config/realtime_pcl_grid_config.yaml
+++ b/grid_map/grid_map_demos/config/realtime_pcl_grid_config.yaml
@@ -1,13 +1,13 @@
 pcl_grid_map_extraction:
   num_processing_threads: 2
   cloud_transform:
-    is_apply_rigidbody_trans: true
+    is_apply_rigidbody_trans: false
     translation:
       x: 0.0
       y: 0.0
       z: 0.0
     rotation: #intrinsic rotation X-Y-Z (r-p-y)sequence
-      r: 3.14
+      r: 0.0
       p: 0.0
       y: 0.0
   cluster_extraction:
@@ -21,9 +21,9 @@ pcl_grid_map_extraction:
   downsampling:
     is_downsample_cloud: true
     voxel_size:
-      x: 0.03
-      y: 0.03
-      z: 0.03
+      x: 0.05
+      y: 0.05
+      z: 0.05
   grid_map:
     min_num_points_per_cell: 2
     resolution: 0.1
