--- a/navigation2/nav2_bringup/bringup/params/sentry_params.yaml
+++ b/navigation2/nav2_bringup/bringup/params/sentry_params.yaml
@@ -2,7 +2,7 @@ bt_navigator:
   ros__parameters:
     use_sim_time: True
     global_frame: map
-    robot_base_frame: base_link
+    robot_base_frame: virt_heading_frame
     odom_topic: /odom
     bt_loop_duration: 10
     default_server_timeout: 20
@@ -182,7 +182,7 @@ local_costmap:
       update_frequency: 15.0
       publish_frequency: 15.0
       global_frame: odom
-      robot_base_frame: base_link
+      robot_base_frame: virt_heading_frame
       use_sim_time: True
       always_send_full_costmap: True
       rolling_window: true
@@ -212,7 +212,7 @@ global_costmap:
       update_frequency: 5.0
       publish_frequency: 5.0
       global_frame: map
-      robot_base_frame: base_link
+      robot_base_frame: virt_heading_frame
       use_sim_time: True
       robot_radius: 0.35
       resolution: 0.05
@@ -278,7 +278,7 @@ recoveries_server:
     wait:
       plugin: "nav2_recoveries/Wait"
     global_frame: odom
-    robot_base_frame: base_link
+    robot_base_frame: virt_heading_frame
     transform_timeout: 0.1
     use_sim_time: true
     simulate_ahead_time: 2.0
